# python-template-codex

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/: pr_summary_template.md
.github/workflows/: code-checks.yml
