[project]
requires-python = ">=3.10"

[tool.ruff]
fix = true
line-length = 120
required-version = ">=0.12.1"

[tool.ruff.lint]
select = [
    "A",  # built-in
    "B",  # bugbear
    "C90",  # complexity
    "D",  # docstrings
    "E",  # error
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "S",  # security
    "W",  # warning
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # package docstring in public package
    "D105",  # Missing docstring in magic method
    "D107",  # Missing docstring in __init__
    "D205",  # 1 blank line required between summary line and description
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
